# ai_library_bot_v2

./: .cursorrules  .cursorrules.txt  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ЗАДАЧИ по улучшению.txt  Задачи на улучшения.txt  Запуск бота.txt
.github/workflows/: ci.yml
PROMT&Instructions/: CURSOR_instructions.md  PROMPT_ai_library_bot.md
SECURITY/: SECURITY.md
ai_library_bot/: .env.example  INSTALL.md  README.md  check_book2_encoding.py  check_encoding.py  check_file_encoding.py  check_index.py  demo_run.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_encoding.py  test_fb2_phrase.py  test_query.py
ai_library_bot/.github/workflows/: ci.yml
ai_library_bot/data/: index.files.pkl  index.metadata.pkl
ai_library_bot/data/books/: .gitkeep  book1.txt  book2.txt  Бизнес по чуть-чуть. 150 мелочей, которые помогут стать успешным руководителем.fb2  Жизнь внутри пузыря. Неформальное руководство менеджера по выживанию в инвестируемом проекте.fb2
ai_library_bot/docs/: PROMPT_COMPLIANCE.md  QUICK_START_BOT.md  STEP8_INSTRUCTIONS.md  TESTING_PLAN.md  deploy.md  metrics.md  ops.md  run_local.md
ai_library_bot/logs/: .gitkeep
ai_library_bot/src/: admin_messages.py  admin_utils.py  analyzer.py  cache_utils.py  category_classifier.py  category_parser.py  config.py  confirmation_manager.py  formatters.py  ingest_service.py  library_catalog.py  main.py  pending_books_manager.py  query_context.py  retriever_service.py  telegram_bot.py  user_categories.py  utils.py
ai_library_bot/src/prompts/: system_librarian.txt
ai_library_bot/tests/: check_book2_encoding.py  check_encoding.py  check_file_encoding.py  check_index.py  test_admin_messages.py  test_admin_utils.py  test_analyzer.py  test_category_classifier.py  test_category_parser.py  test_confirmation_manager.py  test_encoding.py  test_fb2_phrase.py  test_ingest.py  test_library_catalog.py  test_library_catalog_updates.py  test_query.py  test_retriever.py  test_telegram_flow.py  Тесты для определения категорий.txt
